# travel-optimizer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
.streamlit/: config.toml
config/: destinations.yml
dashboard/: app.py
dashboard/snapshot/: fct_travel_score.parquet
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: dim_destination.sql  fct_travel_score.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_air_quality.sql  stg_flights.sql  stg_holidays.sql  stg_marine.sql  stg_price_daily.sql  stg_price_monthly.sql  stg_price_snapshot_manifest.sql  stg_travel_advisory.sql  stg_weather.sql
dbt/seeds/: destinations.csv
dbt/tests/: assert_travel_score_in_range.sql
docs/: INSIGHTS.md
extract/: air_quality.py  client.py  config.py  marine.py  nager.py  open_meteo.py  opensky.py  run.py  state_dept.py  travelpayouts.py
report/: __init__.py  insights.py  reference.py  validation.py
tests/: test_client.py  test_config_and_opensky.py  test_date_windows.py  test_state_dept.py  test_travelpayouts.py  test_validation.py
warehouse/: load.py
