[project]
name = "travel-optimizer"
version = "0.1.0"
description = "When is the best time to travel? A data pipeline blending flight activity, weather, and holiday demand signals."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "pyarrow>=17.0",
    "pandas>=2.2",
    "dbt-duckdb>=1.8",
    "streamlit>=1.38",
    "plotly>=5.24",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run from the repo root so `import extract` / `import warehouse` resolve the
# same way they do under `python -m extract.run`, without an editable install.
pythonpath = ["."]
